--- a/firmware/src/config/default/default.mhc/core.yml
+++ b/firmware/src/config/default/default.mhc/core.yml
@@ -114,6 +114,10 @@ children:
         attributes: {id: visible}
         children:
         - {type: Value, value: 'true'}
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: main}
   - type: Boolean
     attributes: {id: CoreSysCallsFile}
     children:
@@ -1011,7 +1015,7 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: SERCOM0_PAD0}
+        attributes: {value: ''}
   - type: String
     attributes: {id: PIN_13_MODE}
     children:
@@ -1025,14 +1029,14 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: D}
+        attributes: {value: ''}
   - type: String
     attributes: {id: PIN_14_FUNCTION_TYPE}
     children:
     - type: Values
       children:
       - type: User
-        attributes: {value: SERCOM0_PAD1}
+        attributes: {value: ''}
   - type: String
     attributes: {id: PIN_14_MODE}
     children:
@@ -1042,6 +1046,48 @@ children:
         attributes: {value: ''}
   - type: String
     attributes: {id: PIN_14_PERIPHERAL_FUNCTION}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: ''}
+  - type: String
+    attributes: {id: PIN_17_FUNCTION_TYPE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: SERCOM2_PAD1}
+  - type: String
+    attributes: {id: PIN_17_MODE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: ''}
+  - type: String
+    attributes: {id: PIN_17_PERIPHERAL_FUNCTION}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: D}
+  - type: String
+    attributes: {id: PIN_18_FUNCTION_TYPE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: SERCOM2_PAD0}
+  - type: String
+    attributes: {id: PIN_18_MODE}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: ''}
+  - type: String
+    attributes: {id: PIN_18_PERIPHERAL_FUNCTION}
     children:
     - type: Values
       children:
@@ -1097,6 +1143,20 @@ children:
       - type: Dynamic
         attributes: {id: core, value: PA05}
   - type: String
+    attributes: {id: PORT_GROUP_0_PAD_8}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: core, value: PA08}
+  - type: String
+    attributes: {id: PORT_GROUP_0_PAD_9}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: core, value: PA09}
+  - type: String
     attributes: {id: PORT_GROUP_0_PINCFG0}
     children:
     - type: Values
@@ -1109,35 +1169,28 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: core, value: '0x1'}
+        attributes: {id: core, value: '0x0'}
   - type: String
     attributes: {id: PORT_GROUP_0_PINCFG5}
     children:
     - type: Values
       children:
       - type: Dynamic
+        attributes: {id: core, value: '0x0'}
+  - type: String
+    attributes: {id: PORT_GROUP_0_PINCFG8}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
         attributes: {id: core, value: '0x1'}
-  - type: Boolean
-    attributes: {id: PORT_GROUP_0_PIN_0_USED}
+  - type: String
+    attributes: {id: PORT_GROUP_0_PINCFG9}
     children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: core, value: 'false'}
-  - type: Boolean
-    attributes: {id: PORT_GROUP_0_PIN_4_USED}
-    children:
-    - type: Values
-      children:
-      - type: Dynamic
-        attributes: {id: core, value: 'true'}
-  - type: Boolean
-    attributes: {id: PORT_GROUP_0_PIN_5_USED}
-    children:
-    - type: Values
-      children:
-      - type: Dynamic
-        attributes: {id: core, value: 'true'}
+        attributes: {id: core, value: '0x1'}
   - type: String
     attributes: {id: PORT_GROUP_0_PMUX0}
     children:
@@ -1147,6 +1200,13 @@ children:
         attributes: {id: core, value: '0x0'}
   - type: String
     attributes: {id: PORT_GROUP_0_PMUX2}
+    children:
+    - type: Values
+      children:
+      - type: Dynamic
+        attributes: {id: core, value: '0x0'}
+  - type: String
+    attributes: {id: PORT_GROUP_0_PMUX4}
     children:
     - type: Values
       children:
@@ -1494,12 +1554,6 @@ children:
   - type: Boolean
     attributes: {id: USE_SYSTICK_INTERRUPT}
     children:
-    - type: Attributes
-      children:
-      - type: Boolean
-        attributes: {id: readOnly}
-        children:
-        - {type: Value, value: 'false'}
     - type: Values
       children:
       - type: Dynamic
