--- a/firmware/src/config/default/default.mhc/sercom2.yml
+++ b/firmware/src/config/default/default.mhc/sercom2.yml
@@ -137,6 +137,13 @@ children:
       children:
       - type: Dynamic
         attributes: {id: sercom2, value: 'false'}
+  - type: KeyValueSet
+    attributes: {id: USART_RXPO}
+    children:
+    - type: Values
+      children:
+      - type: User
+        attributes: {value: '1'}
   - type: Integer
     attributes: {id: USART_SAMPLE_COUNT}
     children:
