--- a/firmware/src/config/default/harmony-manifest-success.yml
+++ b/firmware/src/config/default/harmony-manifest-success.yml
@@ -4,16 +4,16 @@
 
 
 project: bootloader
-creation_date: 2021-10-26T14:48:26.227+08:00[Asia/Taipei]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
+creation_date: 2021-10-26T16:23:25.203+08:00[Asia/Singapore]    # ISO 8601 format: https://www.w3.org/TR/NOTE-datetime
 operating_system: Windows 10
 mhc_mode: IDE            # [IDE|Standalone|Headless]
 mhc_version: v3.8.2
-mplabx_version: v5.45        # if MPLAB X plugin only
+mplabx_version: v5.50        # if MPLAB X plugin only
 plugin_version: v3.6.4        # if MPLAB X plugin only
-compiler: XC32 (2.10)
+compiler: XC32 (3.01)
 
 modules:
-    - {name: "csp", version: "v3.10.0"}
-    - {name: "dev_packs", version: "v3.10.0"}
+    - {name: "csp", version: "v3.9.1"}
+    - {name: "dev_packs", version: "v3.9.0"}
     - {name: "bootloader", version: "v3.5.0"}
 
