--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ firmware/bootloader.X/debug
 firmware/bootloader.X/nbproject/private/private.xml
 *.swp
 *.o
+tags
+firmware/bootloader.X/build
+firmware/bootloader.X/dist
+
