--- a/firmware/src/config/default/default.mhc/uart_bootloader.yml
+++ b/firmware/src/config/default/default.mhc/uart_bootloader.yml
@@ -41,10 +41,16 @@ children:
     - type: Values
       children:
       - type: User
-        attributes: {value: 'false'}
+        attributes: {value: 'true'}
   - type: String
     attributes: {id: BTL_TRIGGER_LEN}
     children:
+    - type: Attributes
+      children:
+      - type: Boolean
+        attributes: {id: visible}
+        children:
+        - {type: Value, value: 'true'}
     - type: Values
       children:
       - type: User
@@ -62,7 +68,7 @@ children:
     - type: Values
       children:
       - type: Dynamic
-        attributes: {id: uart_bootloader, value: SERCOM2_USART}
+        attributes: {id: uart_bootloader, value: SERCOM0_USART}
 - type: Attachments
   children:
   - type: DirectDependency
@@ -86,10 +92,10 @@ children:
       - type: String
         attributes: {id: targetComponentID}
         children:
-        - {type: Value, value: sercom2}
+        - {type: Value, value: sercom0}
       - type: String
         attributes: {id: targetAttachmentID}
         children:
-        - {type: Value, value: SERCOM2_UART}
+        - {type: Value, value: SERCOM0_UART}
 - type: ElementPosition
   attributes: {x: '272', y: '136', id: uart_bootloader}
