removed generated files

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ tags
 firmware/bootloader.X/build
 firmware/bootloader.X/dist
 firmware/bootloader.X/nbproject/Makefile-*
+firmware/bootloader.X/nbproject/private/
